exports[`invalid(1): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"name": "foo", "dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(1): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"name": "foo", "dependencies": {"foo": "^1.0.0"}}
    |                                  ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;

exports[`invalid(10): {\"name\": \"foo\", \"dependencies\": {\"bar\": \"^1.0.0\", \"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"name": "foo", "dependencies": {"bar": "^1.0.0", "foo": "^1.0.0"}, "dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(10): {\"name\": \"foo\", \"dependencies\": {\"bar\": \"^1.0.0\", \"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"name": "foo", "dependencies": {"bar": "^1.0.0", "foo": "^1.0.0"}, "dependencies": {"foo": "^1.0.0"}}
    |                                                                                      ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;

exports[`invalid(2): {\"name\": \"foo\", \"peerDependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"name": "foo", "peerDependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(2): {\"name\": \"foo\", \"peerDependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"name": "foo", "peerDependencies": {"foo": "^1.0.0"}}
    |                                      ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;

exports[`invalid(3): {\"name\": \"foo\", \"optionalDependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"name": "foo", "optionalDependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(3): {\"name\": \"foo\", \"optionalDependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"name": "foo", "optionalDependencies": {"foo": "^1.0.0"}}
    |                                          ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;

exports[`invalid(4): {\"name\": \"@scope/foo\", \"dependencies\": {\"@scope/foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"name": "@scope/foo", "dependencies": {"@scope/foo": "^1.0.0"}}

`;

exports[`invalid(4): {\"name\": \"@scope/foo\", \"dependencies\": {\"@scope/foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"name": "@scope/foo", "dependencies": {"@scope/foo": "^1.0.0"}}
    |                                         ^^^^^^^^^^^^ A package cannot list itself (\`@scope/foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "@scope/foo"}

`;

exports[`invalid(5): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"^1.0.0\", \"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"name": "foo", "dependencies": {"foo": "^1.0.0", "foo": "^2.0.0"}}

`;

exports[`invalid(5): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"^1.0.0\", \"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"name": "foo", "dependencies": {"foo": "^1.0.0", "foo": "^2.0.0"}}
    |                                                   ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;

exports[`invalid(6): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"latest\"}} 1`] = `

[Input]
  1 | {"name": "foo", "dependencies": {"foo": "latest"}}

`;

exports[`invalid(6): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"latest\"}} 2`] = `

Message:
> 1 | {"name": "foo", "dependencies": {"foo": "latest"}}
    |                                  ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;

exports[`invalid(7): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"name": "foo", "dependencies": {"foo": "1.0.0"}}

`;

exports[`invalid(7): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"name": "foo", "dependencies": {"foo": "1.0.0"}}
    |                                  ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;

exports[`invalid(8): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"npm:foo@^1.0.0\"}} 1`] = `

[Input]
  1 | {"name": "foo", "dependencies": {"foo": "npm:foo@^1.0.0"}}

`;

exports[`invalid(8): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"npm:foo@^1.0.0\"}} 2`] = `

Message:
> 1 | {"name": "foo", "dependencies": {"foo": "npm:foo@^1.0.0"}}
    |                                  ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;

exports[`invalid(9): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"name": "foo", "dependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(9): {\"name\": \"foo\", \"dependencies\": {\"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"name": "foo", "dependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^1.0.0"}}
    |                                                                     ^^^^^ A package cannot list itself (\`foo\`) as a dependency.

Suggestion 1/1: Remove the self-dependency.:
  1 | {"name": "foo"}

`;
